--- a/src/main/webapp/contact.html
+++ b/src/main/webapp/contact.html
@@ -51,7 +51,7 @@
         <h1>Contact</h1>
     </div>
     <div class="well" style="padding-bottom: 9px;">
-        <p>For all inquiries contact gohomesad at gmail.com</p>
+        <p>For all inquiries contact derekzuk at gmail.com</p>
     </div>
 
     <hr>
