Updates for derekzuk.com

--- a/src/main/webapp/art.html
+++ b/src/main/webapp/art.html
@@ -82,9 +82,44 @@
                 <h1>Marker</h1>
             </div>
 
+            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 215px;">
+                <a class="thumbnail" href="images/fullsize/marker/3412 Park Ave View South.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/marker/3412 Park Ave View South.jpg" alt="" style="height: 203px;">
+                </a>
+            </div>
+            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 175px;">
+                <a class="thumbnail" href="images/fullsize/marker/row houses at angle.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/marker/row houses at angle.jpg" alt="" style="height: 203px;">
+                </a>
+            </div>
+            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 210px;">
+                <a class="thumbnail" href="images/fullsize/marker/1215 N 19th St View West.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/marker/1215 N 19th St View West.jpg" alt="" style="height: 203px;">
+                </a>
+            </div>
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/marker/3105 Patterson Ave View South.jpg">
-                    <img class="img-responsive" src="images/fullsize/marker/3105 Patterson Ave View South.jpg" alt="" style="height: 203px;">
+                <a class="thumbnail" href="images/fullsize/marker/big house.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/marker/big house.jpg" alt="" style="height: 203px;">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-2 col-xs-6 thumb" style="width: 330.5px;">
+                <a class="thumbnail" href="images/fullsize/marker/two rowhouses.jpg">
+                    <img class="img-responsive" src="images/fullsize/marker/two rowhouses.jpg" alt="" style="height: 203px;">
+                </a>
+            </div>
+            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
+                <a class="thumbnail" href="images/fullsize/marker/electric pole.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/marker/electric pole.jpg" alt="" style="height: 203px;">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-2 col-xs-6 thumb" style="width: 280.5px;">
+                <a class="thumbnail" href="images/fullsize/marker/star sky.jpg">
+                    <img class="img-responsive" src="images/fullsize/marker/star sky.jpg" alt="" style="height: 203px;">
+                </a>
+            </div>
+            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
+                <a class="thumbnail" href="images/fullsize/marker/single rowhouse.jpg">
+                    <img class="img-responsive" src="images/fullsize/marker/single rowhouse.jpg" alt="" style="height: 203px;">
                 </a>
             </div>
             <div class="col-lg-3 col-md-2 col-xs-6 thumb" style="width: 300.5px;">
@@ -103,23 +138,8 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/marker/3412 Park Ave Eastward Apartment.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/marker/3412 Park Ave Eastward Apartment.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
                 <a class="thumbnail" href="images/fullsize/marker/3412 Park Ave Electric Pole.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
                     <img class="img-responsive" src="images/fullsize/marker/3412 Park Ave Electric Pole.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/marker/3412 Park Ave View South.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/marker/3412 Park Ave View South.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/marker/Scuffletown.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/marker/Scuffletown.jpg" alt="" style="height: 203px;">
                 </a>
             </div>
 
@@ -177,16 +197,6 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/pen/hideous ball.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/pen/hideous ball.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/pen/anemone.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/pen/anemone.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
                 <a class="thumbnail" href="images/fullsize/pen/your lips are so kissable.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
                     <img class="img-responsive" src="images/fullsize/pen/your lips are so kissable.jpg" alt="" style="height: 203px;">
                 </a>
@@ -199,16 +209,6 @@
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
                 <a class="thumbnail" href="images/fullsize/pen/two eye.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
                     <img class="img-responsive" src="images/fullsize/pen/two eye.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/pen/its a secret.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/pen/its a secret.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-			<div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/pen/big mouth.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/pen/big mouth.jpg" alt="" style="height: 203px;">
                 </a>
             </div>
 			
