Changing front page image

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,7 +49,7 @@
 <div class="gohomesad_image">
 <fieldset>
 <a href="art.html">
-<img src="images/collage1.png">
+<img src="images/idleness headless square 5.png" width="900" height = "900">
 </fieldset>
 </div>
 </div>
