--- a/src/main/webapp/art.html
+++ b/src/main/webapp/art.html
@@ -58,6 +58,7 @@
             <li><a href="https://derekzuk.bandcamp.com/">Music</a></li>
             <li class="active"><a href="art.html">Art</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="https://www.instagram.com/dare_wrek/">IG</a></li>
             <!-- <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Social Media <span class="caret"></span></a>
               <ul class="dropdown-menu">
