--- a/src/main/webapp/contact.html
+++ b/src/main/webapp/contact.html
@@ -29,7 +29,7 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="https://derekzuk.bandcamp.com/">Music</a></li>
+                <li><a href="https://99na.bandcamp.com/releases/">Music</a></li>
                 <li><a href="art.html">Art</a></li>
                 <li class="active"><a href="contact.html">Contact</a></li>
                 <li><a href="https://www.instagram.com/dearwrick/">IG</a></li>
@@ -37,7 +37,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Social Media <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="https://www.facebook.com/gohomesad">Facebook</a></li>
-                    <li><a href="https://derekzuk.bandcamp.com/">Bandcamp</a></li>
+                    <li><a href="https://99na.bandcamp.com/releases/">Bandcamp</a></li>
                     <li><a href="https://instagram.com/">Instagram</a></li>
                   </ul>
                 </li> -->
