--- a/src/main/webapp/art.html
+++ b/src/main/webapp/art.html
@@ -75,7 +75,36 @@
     <!-- Page Content -->
     <div class="container">
     
-    <!--  Drawings -->
+    <!--  Pics -->
+
+        <div class="row">
+
+            <div class="page-header">
+                <h1>Paint</h1>
+            </div>
+
+            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 260px;">
+                <a class="thumbnail" href="images/fullsize/paint/audi.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/paint/audi.jpg" alt="" style="height: 203px;">
+                </a>
+            </div>
+            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 240px;">
+                <a class="thumbnail" href="images/fullsize/paint/crosswalk.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/paint/crosswalk.jpg" alt="" style="height: 203px;">
+                </a>
+            </div>
+            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 300px;">
+                <a class="thumbnail" href="images/fullsize/paint/girl.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/paint/girl.jpg" alt="" style="height: 203px;">
+                </a>
+            </div>
+            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 180px;">
+                <a class="thumbnail" href="images/fullsize/paint/32nd.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/paint/32nd.jpg" alt="" style="height: 203px;">
+                </a>
+            </div>
+
+        </div>
     
         <div class="row">
 
@@ -180,11 +209,6 @@
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
                 <a class="thumbnail" href="images/fullsize/pen/fish.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
                     <img class="img-responsive" src="images/fullsize/pen/fish.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/pen/your lips are so kissable.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/pen/your lips are so kissable.jpg" alt="" style="height: 203px;">
                 </a>
             </div>
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
