Update index and art

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,10 +48,10 @@
 
 <div class="gohomesad_image_container">
 <div class="gohomesad_image">
-<fieldset>
-<a href="art.html">
-<img src="images/idleness headless square 5.png" width="900" height = "900">
-</fieldset>
+    <fieldset>
+        <a href="art.html">
+        <img src="images/99na.jpeg" width="1024" height = "862">
+    </fieldset>
 </div>
 </div>
 <p/>
