--- a/src/main/webapp/art.html
+++ b/src/main/webapp/art.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Artwork</title>
+    <title>Art</title>
 
 	<link rel="stylesheet"
       href="./css/styles.css"
