Removing art that I don't like

--- a/src/main/webapp/art.html
+++ b/src/main/webapp/art.html
@@ -107,6 +107,7 @@
     
         <div class="row">
 
+            <!--Marker-->
             <div class="page-header">
             </div>
 
@@ -136,23 +137,8 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/marker/electric pole.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/marker/electric pole.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
                 <a class="thumbnail" href="images/fullsize/marker/single rowhouse.jpg">
                     <img class="img-responsive" src="images/fullsize/marker/single rowhouse.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-3 col-md-2 col-xs-6 thumb" style="width: 300.5px;">
-                <a class="thumbnail" href="images/fullsize/marker/3412 Park Ave Eastward Apartment 2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/marker/3412 Park Ave Eastward Apartment 2.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/marker/3412 Park Ave Electric Pole.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/marker/3412 Park Ave Electric Pole.jpg" alt="" style="height: 203px;">
                 </a>
             </div>
 
@@ -160,6 +146,7 @@
 
         <div class="row">
 
+            <!--Pen-->
             <div class="page-header">
             </div>
 
@@ -174,33 +161,8 @@
                 </a>
             </div>
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/pen/totem2.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/pen/totem2.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
                 <a class="thumbnail" href="images/fullsize/pen/sketch.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
                     <img class="img-responsive" src="images/fullsize/pen/sketch.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/pen/totem.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/pen/totem.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>     
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/pen/connected faces.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/pen/connected faces.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/pen/cry.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/pen/cry.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
-                <a class="thumbnail" href="images/fullsize/pen/monster.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/pen/monster.jpg" alt="" style="height: 203px;">
                 </a>
             </div>
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 190px;">
