--- a/src/main/webapp/art.html
+++ b/src/main/webapp/art.html
@@ -83,23 +83,18 @@
             </div>
 
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 260px;">
-                <a class="thumbnail" href="images/fullsize/paint/audi.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/paint/audi.jpg" alt="" style="height: 203px;">
-                </a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 240px;">
-                <a class="thumbnail" href="images/fullsize/paint/crosswalk.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/paint/crosswalk.jpg" alt="" style="height: 203px;">
+                <a class="thumbnail" href="images/fullsize/paint/audi.jpeg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/paint/audi.jpeg" alt="" style="height: 203px;">
                 </a>
             </div>
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 300px;">
-                <a class="thumbnail" href="images/fullsize/paint/girl.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/paint/girl.jpg" alt="" style="height: 203px;">
+                <a class="thumbnail" href="images/fullsize/paint/girl.jpeg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/paint/girl.jpeg" alt="" style="height: 203px;">
                 </a>
             </div>
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 180px;">
-                <a class="thumbnail" href="images/fullsize/paint/32nd.jpg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
-                    <img class="img-responsive" src="images/fullsize/paint/32nd.jpg" alt="" style="height: 203px;">
+                <a class="thumbnail" href="images/fullsize/paint/32nd.jpeg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/paint/32nd.jpeg" alt="" style="height: 203px;">
                 </a>
             </div>
 
