--- a/src/main/webapp/art.html
+++ b/src/main/webapp/art.html
@@ -87,12 +87,17 @@
                     <img class="img-responsive" src="images/fullsize/paint/audi.jpeg" alt="" style="height: 203px;">
                 </a>
             </div>
+            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 245px;">
+                <a class="thumbnail" href="images/fullsize/paint/crosswalk.jpeg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/paint/crosswalk.jpeg" alt="" style="height: 203px;">
+                </a>
+            </div>
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 300px;">
                 <a class="thumbnail" href="images/fullsize/paint/girl.jpeg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
                     <img class="img-responsive" src="images/fullsize/paint/girl.jpeg" alt="" style="height: 203px;">
                 </a>
             </div>
-            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 180px;">
+            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 181px;">
                 <a class="thumbnail" href="images/fullsize/paint/32nd.jpeg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
                     <img class="img-responsive" src="images/fullsize/paint/32nd.jpeg" alt="" style="height: 203px;">
                 </a>
