--- a/src/main/webapp/art.html
+++ b/src/main/webapp/art.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Art</title>
+    <title>used car parts</title>
 
 	<link rel="stylesheet"
       href="./css/styles.css"
@@ -100,6 +100,11 @@
             <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 181px;">
                 <a class="thumbnail" href="images/fullsize/paint/32nd.jpeg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
                     <img class="img-responsive" src="images/fullsize/paint/32nd.jpeg" alt="" style="height: 203px;">
+                </a>
+            </div>
+            <div class="col-lg-2 col-md-3 col-xs-6 thumb" style="width: 260px;">
+                <a class="thumbnail" href="images/fullsize/paint/across-the-street.jpeg" data-toggle="lightbox" data-gallery="multiimages" data-title="">
+                    <img class="img-responsive" src="images/fullsize/paint/across-the-street.jpeg" alt="" style="height: 203px;">
                 </a>
             </div>
 
